--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,17 @@ table {
 html {
     font-family: Garamond,Baskerville,Baskerville Old Face,Hoefler Text,Times New Roman,serif; 
 }
+
+input {
+	height: 1.5rem;
+	font: 1.5rem;
+	padding-left: 1rem;
+	border: none;
+}
+
+body {
+	background-color: rgba(192, 191, 191, 0.592);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
