--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,9 @@ body {
 	flex-direction: column;
 	align-items: center;
 }
+
+main { 
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
